Closed
Bug 1500439
Opened 7 years ago
Closed 7 years ago
Convert NS_STYLE_ANIMATION_PLAY_STATE defined constants to enum values
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox65 | --- | fixed |
People
(Reporter: tb120, Assigned: tb120)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:62.0) Gecko/20100101 Firefox/62.0
Steps to reproduce:
This bug is linked to bug 1277133 and is to track changing NS_STYLE_ANIMATION_PLAY_STATE defined constants to enum values.
Actual results:
NA
Expected results:
NA
Updated•7 years ago
|
Status: UNCONFIRMED → NEW
Component: Untriaged → CSS Parsing and Computation
Ever confirmed: true
Product: Firefox → Core
| Assignee | ||
Comment 1•7 years ago
|
||
This change removes directives NS_STYLE_ANIMATION_PLAY_STATE_* and replaces the values with those from a scoped enum called StyleAnimationPlayState.
Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/autoland/rev/0a73fd515a35
Convert NS_STYLE_ANIMATION_PLAY_STATE_* to scoped enum StyleAnimationPlayState r=emilio
Comment 3•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•7 years ago
|
Assignee: nobody → mozbug
You need to log in
before you can comment on or make changes to this bug.
Description
•