layout/style/nsStyleConsts.h
@@ -285,9 +285,11 @@ enum class FillMode : uint8_t;
 // See nsStyleDisplay
 #define NS_STYLE_ANIMATION_ITERATION_COUNT_INFINITE 0
 
-// See nsStyleDisplay
-#define NS_STYLE_ANIMATION_PLAY_STATE_RUNNING     0
-#define NS_STYLE_ANIMATION_PLAY_STATE_PAUSED      1
+// Animation play state
+enum class StyleAnimationPlayState : uint8_t {
+    Running,
+    Paused
+};
 
 // See nsStyleImageLayers
 enum class StyleImageLayerAttachment : uint8_t {
