layout/style/nsStyleStruct.h
@@ -1805,7 +1805,7 @@ struct StyleAnimation
   nsAtom* GetName() const { return mName; }
   dom::PlaybackDirection GetDirection() const { return mDirection; }
   dom::FillMode GetFillMode() const { return mFillMode; }
-  uint8_t GetPlayState() const { return mPlayState; }
+  StyleAnimationPlayState GetPlayState() const { return mPlayState; }
   float GetIterationCount() const { return mIterationCount; }
 
   void SetName(already_AddRefed<nsAtom> aName) { mName = aName; }
@@ -1822,7 +1822,7 @@ private:
   RefPtr<nsAtom> mName; // nsGkAtoms::_empty for 'none'
   dom::PlaybackDirection mDirection;
   dom::FillMode mFillMode;
-  uint8_t mPlayState;
+  StyleAnimationPlayState mPlayState;
   float mIterationCount; // mozilla::PositiveInfinity<float>() means infinite
 };
 
@@ -2194,7 +2194,7 @@ struct MOZ_NEEDS_MEMMOVABLE_MEMBERS nsStyleDisplay
   {
     return mAnimations[aIndex % mAnimationFillModeCount].GetFillMode();
   }
-  uint8_t GetAnimationPlayState(uint32_t aIndex) const
+  mozilla::StyleAnimationPlayState GetAnimationPlayState(uint32_t aIndex) const
   {
     return mAnimations[aIndex % mAnimationPlayStateCount].GetPlayState();
   }
